feat : add phpsessid token and auto fighter
