# src/codegen/model/fightResult.ts
@@ -1,0 +1,83 @@
+/**
+ * Leekwars
+ * Leekwars backend api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+import { Leek } from './leek';
+
+/**
+* Result of a fight
+*/
+export class FightResult {
+    'id': number;
+    'date': number;
+    'year': number;
+    'type': number;
+    'context': number;
+    'status': number;
+    'winner': number;
+    'leeks1': Array<Leek>;
+    'leeks2': Array<Leek>;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "id",
+            "baseName": "id",
+            "type": "number"
+        },
+        {
+            "name": "date",
+            "baseName": "date",
+            "type": "number"
+        },
+        {
+            "name": "year",
+            "baseName": "year",
+            "type": "number"
+        },
+        {
+            "name": "type",
+            "baseName": "type",
+            "type": "number"
+        },
+        {
+            "name": "context",
+            "baseName": "context",
+            "type": "number"
+        },
+        {
+            "name": "status",
+            "baseName": "status",
+            "type": "number"
+        },
+        {
+            "name": "winner",
+            "baseName": "winner",
+            "type": "number"
+        },
+        {
+            "name": "leeks1",
+            "baseName": "leeks1",
+            "type": "Array<Leek>"
+        },
+        {
+            "name": "leeks2",
+            "baseName": "leeks2",
+            "type": "Array<Leek>"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return FightResult.attributeTypeMap;
+    }
+}
+
