# src/codegen/model/gardenStartSoloFightPostRequest.ts
@@ -1,0 +1,37 @@
+/**
+ * Leekwars
+ * Leekwars backend api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+
+export class GardenStartSoloFightPostRequest {
+    'leekId'?: number;
+    'targetId'?: number;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "leekId",
+            "baseName": "leek_id",
+            "type": "number"
+        },
+        {
+            "name": "targetId",
+            "baseName": "target_id",
+            "type": "number"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return GardenStartSoloFightPostRequest.attributeTypeMap;
+    }
+}
+
