# src/codegen/model/getSoloOpponents200Response.ts
@@ -1,0 +1,32 @@
+/**
+ * Leekwars
+ * Leekwars backend api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+import { Opponent } from './opponent';
+
+export class GetSoloOpponents200Response {
+    'opponents': Array<Opponent>;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "opponents",
+            "baseName": "opponents",
+            "type": "Array<Opponent>"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return GetSoloOpponents200Response.attributeTypeMap;
+    }
+}
+
