# src/codegen/model/opponent.ts
@@ -1,0 +1,52 @@
+/**
+ * Leekwars
+ * Leekwars backend api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+
+/**
+* Opponent
+*/
+export class Opponent {
+    'id': number;
+    'name': string;
+    'level': number;
+    'talent': number;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "id",
+            "baseName": "id",
+            "type": "number"
+        },
+        {
+            "name": "name",
+            "baseName": "name",
+            "type": "string"
+        },
+        {
+            "name": "level",
+            "baseName": "level",
+            "type": "number"
+        },
+        {
+            "name": "talent",
+            "baseName": "talent",
+            "type": "number"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return Opponent.attributeTypeMap;
+    }
+}
+
